crates/kdl-config-derive/tests/ui/registry_non_string_key.stderr
error: registry placement requires HashMap<String, V>, BTreeMap<String, V>, or Vec<(String, V)> field type
 --> tests/ui/registry_non_string_key.rs:7:6
  |
7 |     #[kdl(registry)]
  |      ^^^^^^^^^^^^^^^
